--- a/fine_tuning.ipynb
+++ b/fine_tuning.ipynb
@@ -453,7 +453,7 @@
     "    \n",
     "    for doc_id in author_ids:\n",
     "        \n",
-    "        file_path = DATA_DIR / \"raw\" / (doc_id + \"_raw.txt\")\n",
+    "        file_path = data_dir / \"raw\" / (doc_id + \"_raw.txt\")\n",
     "        \n",
     "        try:\n",
     "            with open(file_path, \"r\") as in_f:\n",
@@ -574,69 +574,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "632c9f78-05f5-453c-8444-c559b436e0c5",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "optim = AdamW(model.parameters(), lr= 5e-5)\n",
-    "\n",
-    "for epoch in range(3):\n",
-    "    for bacth in train_loader\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "66383deb-e6a2-45da-a128-7455be98b8e7",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba09f704-8c07-4178-b5f3-5cf95c917d57",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "torch.tensor([1,0,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "651fdcfd-ef84-4149-b138-fb53e6a83178",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "metadata.filter((pl.col(\"author\") == \"Goethe, Johann Wolfgang von\") & (pl.col(\"subjects\").str.contains(\"Drama\") ))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d33a9127-3757-4e6c-a3dc-31bdffa15662",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "pt_batch = tokenizer(text, return_tensors=\"pt\") \n",
-    "print(pt_batch)\n",
-    "print(pt_batch['input_ids'].shape[1]// 512)\n",
-    "#lets drop the last element since torch.split does not care if whther the last sequence is of the right lenght\n",
-    "#torch.split(pt_batch['input_ids'], 512, dim=1)[:-1]"
-   ]
   },
   {
    "cell_type": "code",
